--- a/OutlookClient/packages.config
+++ b/OutlookClient/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Experimental.IdentityModel.Clients.ActiveDirectory" version="4.0.209160138-alpha" targetFramework="net45" requireReinstallation="true" />
+  <package id="Microsoft.Experimental.IdentityModel.Clients.ActiveDirectory" version="4.0.209160138-alpha" targetFramework="net45" />
 </packages>
