--- a/OutlookClient/OutlookClient.csproj
+++ b/OutlookClient/OutlookClient.csproj
@@ -53,35 +53,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connections\OutlookConnection.cs" />
+    <Compile Include="OutlookAlarm.cs" />
+    <Compile Include="OutlookCalendar.cs" />
+    <Compile Include="OutlookEvent.cs" />
+    <Compile Include="OutlookConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Servers\OutlookServer.cs" />
-    <Compile Include="UI\OutlookOAuthForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\OutlookOAuthForm.Designer.cs">
-      <DependentUpon>OutlookOAuthForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="OutlookServer.cs" />
+    <Compile Include="OutlookToDo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CalCli.API\CalCli.API.csproj">
       <Project>{2c258fae-97ed-4916-b5a3-4723700d675d}</Project>
       <Name>CalCli.API</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CalDav\CalDav.csproj">
+      <Project>{01a4c4cf-5ad1-4324-a391-dc922c84be1c}</Project>
+      <Name>CalDav</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Alarms\" />
-    <Folder Include="Calendars\" />
-    <Folder Include="Events\" />
-    <Folder Include="ToDos\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="UI\OutlookOAuthForm.resx">
-      <DependentUpon>OutlookOAuthForm.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="Microsoft.Office.Core">
